# fiap-mlet-datathon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
data/notebooks/: preprocessamendo.ipynb
data/preprocessed/itens/itens/: dados_preprocessados.csv
notebooks/: data_analysis.ipynb  data_preprocessing.ipynb  data_preprocessing2.ipynb  data_processing.ipynb  feature_engineering.ipynb
src/: dataset.py
src/modeling/: __init__.py
