[project]
name = "fiap-mlet-datathon"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
readme = "README.md"
authors = []
maintainers = []
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "pyright>=1.1.391", "ruff>=0.8.4"]
