[project]
name = "fiap-mlet-datathon"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
readme = "README.md"
authors = []
maintainers = []
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyarrow==18.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "pyright>=1.1.391", "ruff>=0.8.4"]
